--- a/examples/himr90.chr20.conf
+++ b/examples/himr90.chr20.conf
@@ -2,8 +2,8 @@
 res: 40000
 win: 2000000
 chrname: chr20
-chrsize: examples/hg19.size.bed
+chrsize: examples/hg19.chrom.sizes
 output_prefix: hIMR90
-output_dir: examples/output
-input_matrix: examples/hIMR90.chr20 
+output_dir: examples/outputs
+input_matrix: examples/hIMR90.chr20.matrix.txt
 genes_file: examples/hg19.genes.bed
