message describing your commit goes here

--- a/examples/mCO.chr12.conf
+++ b/examples/mCO.chr12.conf
@@ -4,6 +4,6 @@ win: 2000000
 chrname: chr12
 chrsize: examples/mm9.chrom.sizes
 output_prefix: mCO
-output_dir: examples/outputs
+output_dir: examples/output
 input_matrix: examples/mCO.chr12.matrix.txt
 genes_file: examples/mm9.genes2.bed
